--- a/build.gradle
+++ b/build.gradle
@@ -30,4 +30,10 @@ dependencies {
 	implementation 'com.h2database:h2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	//testImplementation 'org.springframework.security:spring-security-test'
+
+	// Java 10 compability
+	implementation 'javax.xml.bind:jaxb-api:2.3.0'
+
+	// JWT
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 }
