--- a/build.gradle
+++ b/build.gradle
@@ -35,5 +35,6 @@ dependencies {
 	implementation 'javax.xml.bind:jaxb-api:2.3.0'
 
 	// JWT
+	implementation "org.springframework.boot:spring-boot-starter-security"
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 }
