--- a/build.gradle
+++ b/build.gradle
@@ -36,5 +36,6 @@ dependencies {
 
 	// JWT
 	implementation "org.springframework.boot:spring-boot-starter-security"
+	implementation "com.auth0:java-jwt:3.4.0"
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 }
